--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "gh-pages -d build"
+    "predeploy": "ng build --prod --base-href https://tereshka.github.io/angular-tutorial/",
+    "deploy": "ngh --dir=dist/angular-tutorial"
   },
   "private": true,
   "dependencies": {
@@ -22,9 +23,9 @@
     "@angular/platform-browser": "^6.1.10",
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
+    "angular-cli-ghpages": "^0.5.3",
     "angular-in-memory-web-api": "^0.6.1",
     "core-js": "^2.6.9",
-    "gh-pages": "^2.0.1",
     "rxjs": "^6.5.2",
     "zone.js": "^0.8.29"
   },
